--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             <h2> Media & figures </h2>
             <article>
                 <h2>Image Example</h2>
-                <img src="C:\Users\A H BADHON\Desktop\My_first\assets\image1.png" alt="sample image" width="300"
+                <img src="image1.png" alt="sample image" width="300"
                     height="200">
 
                 <!---video-->
                 <h2> Video Example </h2>
                 <video width="500" height=" 300" controls>
-                    <source src=" C:\Users\A H BADHON\Desktop\My_first\assets\video1.mp4" type="video/mp4">
+                    <source src=" assets/video1.mp4" type="video/mp4">
                 </video>
 
 
@@ -306,6 +306,7 @@
 
             </form>
         </section>
+
 
 
     </main>
