--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h2> Media & figures </h2>
             <article>
                 <h2>Image Example</h2>
-                <img src="image1.png" alt="sample image" width="300"
+                <img src="assets/image1.png" alt="sample image" width="300"
                     height="200">
 
                 <!---video-->
@@ -310,3 +310,4 @@
 
 
     </main>
+
